--- a/global.css
+++ b/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -19,6 +21,7 @@ body {
 
 body {
   font-size: 1.6rem;
+	font-family: 'Montserrat', sans-serif;
 }
 
 button {
@@ -28,4 +31,8 @@ button {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+li {
+	list-style: none;
 }
