--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 body {
 	background-color: #6441A5;
 	display: flex;
@@ -8,7 +10,37 @@ body {
 }
 
 .container {
-	background-color: aliceblue;
 	height: 100vh;
 	width: calc(100vw - 20vw);
+}
+
+.header {
+	width: 100%;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.navigation {
+	width: 40%;
+}
+
+.navigation ul {
+	display: flex;
+	justify-content: space-around;
+	font-weight: 700;
+	font-size: 1.8rem;
+	color: rgba(241, 241, 241, 0.7);
+}
+
+.navigation ul li a {
+	transition: color 0.2s;
+}
+
+.navigation ul li a:hover{
+	padding-bottom: 3px;
+	border-bottom: 6px solid #F1F1F1;
+	color: #F1F1F1;
 }
